--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxMiwiZXhwIjoxNzQ2NDMyNjcxfQ.kE_V28bduFNCi66HyiK0npzG5gwOewFELfoA3uMr6fQ"; // Replace with your actual token
         const userId = 12;
 
-        fetch(`http://localhost:9090/dashboard?user_id=${userId}`, {
+        fetch(`https://uranus2.oklabflensburg.de/dashboard?user_id=${userId}`, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${token}`
